# statnotes

./: chapter10.py  chapter11.py  flake.nix  main.py  pyproject.toml
