[project]
name = "statnotes"
version = "0.1.0"
description = "statistics notes"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "black>=25.9.0",
    "marimo>=0.17.6",
    "pandas>=2.3.3",
    "polars>=1.35.1",
    "python-lsp-server>=1.13.1",
    "ruff>=0.14.3",
    "scipy>=1.16.3",
]
